--- a/public/css/styleNT.css
+++ b/public/css/styleNT.css
@@ -72,7 +72,7 @@ body {
 
 .div-member-info {
 		height: 230px;
-		background: linear-gradient(to bottom right, #33ccff 0%, #ff99cc 100%);
+		background:  linear-gradient(to right, #283c86, #45a247);;
 		margin-bottom: 16px;
 		padding: 70px 0;
 		  text-align: center;
