--- a/public/css/style.css
+++ b/public/css/style.css
@@ -196,17 +196,56 @@ header.masthead h1{
   text-align: right;
   vertical-align: bottom !important;
 }
-.dropdown-submenu{
+.abc{
   position: relative;
 }
-.dropdown-submenu .dropdown-menu{
-  top:0;
-  left: 100%;
-  margin-top: -1px;
+.abc ul {
+list-style: none;
+    margin: 0;
+    padding: 0;
 }
-.dropdown-submenu :hover .dropdown-menu{
-  display: block;
+.abc ul {
+    display: none;
 }
+
+    .abc ul li {
+        position: relative;
+    }
+
+    .abc ul > li > a {
+        padding: 10px;
+        display: block;
+        width: 150px;
+        border-bottom: 1px solid rgba(0,0,0,0.1);
+    }
+
+    .abc ul > li:hover {
+        background: #d9d9d9;
+    }
+
+    .abc ul ul {
+        display: none;
+    }
+
+
+    .abc ul > li li > a {
+        width: 150px;
+        padding: 10px;
+        display: block;
+        width: 150px;
+        border-bottom: 1px solid rgba(0,0,0,0.1);
+    }
+
+.dropdown-submenu {
+ position: relative;
+}
+
+.dropdown-submenu .dropdown-menu {
+ top: 0;
+ left: 100%;
+ margin-top: -1px;
+}
+
 body {
   font-size: 16px;
   font-weight: 400;
